# HelloVulkan

./: .gitignore  HelloVulkan.sln
HelloVulkan/: AndroidManifest.xml  CMakeLists.txt  HelloVulkan.vcxproj  HelloVulkan.vcxproj.filters  create_projects.cmd
HelloVulkan/Tegra-Android/Debug/: ant.command.1.tlog  ant.write.1.tlog  ant_log.xml  nsight_tegra_build.xml  nsight_tegra_manifest.xml
HelloVulkan/Tegra-Android/Debug/HelloVulkan.tlog/: HelloVulkan.lastbuildstate  aarch64-linux-android-g++-collect2.read.1.tlog  aarch64-linux-android-g++-collect2.write.1.tlog  aarch64-linux-android-g++-link.command.1.tlog  aarch64-linux-android-g++.compile.command.1.tlog  aarch64-linux-android-g++.compile.read.1.tlog  aarch64-linux-android-g++.compile.write.1.tlog  aarch64-linux-android-g++.read.1.tlog  aarch64-linux-android-g++.write.1.tlog
HelloVulkan/Tegra-Android/Debug/libs/arm64-v8a/: gdbserver
HelloVulkan/android/: AndroidMain.cpp  engine.h
HelloVulkan/assets/: compileShaders.cmd  debug.vert  frag.spv  shader.frag  shader.vert
HelloVulkan/include/: Asset.h  DebugCoord.h  Logging.h  Model.h  ShadowMap.h  VKFuncs.h  VKImport.h  VKRenderer.h  engine.h
HelloVulkan/jni/: Model.cpp  Model.h  ShadowMap.cpp  ShadowMap.h  VKFuncs.h  VKImport.h  VKRenderer.cpp  VKRenderer.h  main.cpp
HelloVulkan/src/: Asset.cpp  DebugCoord.cpp  Model.cpp  ShadowMap.cpp  VKFuncs.cpp  VKRenderer.cpp
HelloVulkan/windows/: WinMain.cpp
